# vinculum

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 218526345707_add_vinc_table.py  8d36f6540778_actually_add_vinc_table.py  a03ac4a1ad5d_first.py
app/vinculum_api/: __init__.py  main.py
app/vinculum_api/controllers/: __init__.py  vincula.py
app/vinculum_api/domain/: __init__.py  vincula.py
app/vinculum_api/lib/: __init__.py  _emojis.py  async_session.py  emoji_utilities.py  exceptions.py  service.py  sqlalchemy_plugin.py
app/vinculum_api/routers/: __init__.py  vincula.py
app/vinculum_api/services/: __init__.py  vinculum.py
app/vinculum_api/settings/: __init__.py  _api.py  _app.py  _base_env.py  _database.py  _gunicorn_config.py  _server.py
scripts/: start.sh
